# think_ai

./: .coveragerc  .deploy.json.bak  .dockerignore  .env.example  .eslintrc.js  .flake8  .gitignore  .nixpacks-ignore  .npmignore  .npmrc  .pre-commit-config-fast.yaml  .pre-commit-config-full.yaml  .pre-commit-config.yaml  .railwayignore  .vim-rust-fmt  24hr_conversation_simulator.py  ABSTRACT_PRINCIPLES_FIX.md  AI_ART_README.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_SUCCESS.md  ARCHITECTURE_VALIDATION_REPORT.md  AUDIO_IMPLEMENTATION_SUMMARY.md  BUILD_SUMMARY.md  CLAUDE.md  CLEANUP-SUMMARY.md  CLI_COMPARISON.md  CLI_USAGE.md  COLAB_FULL_SYSTEM_REAL.ipynb  COMPILATION_FIXES_SUMMARY.md  CONTRIBUTING.md  CONVERSATIONAL_FIX_IMPLEMENTATION.md  CURRENT_STATUS.md  Cargo-release.toml  Cargo.toml  DEPLOY-WITH-QWEN.md  DEPLOYMENT-STATUS.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  (+1349 more)
full-system/: Cargo.toml  DEPLOY_NOW.sh  DEPLOY_NOW_COMMANDS.sh  Dockerfile  MANUAL_DEPLOY_STEPS.md  PRODUCTION_DEPLOYMENT.md  analyze_dashboard_screenshot.md  check-errors.sh  check-knowledge-syntax-v2.sh  check-knowledge-syntax.sh  deploy_production.sh  e2e_prod_test.sh  final-build.sh  final-fix-all-syntax.sh  fix-all-knowledge-syntax.sh  fix-common-errors.sh  fix-knowledge-syntax-errors.sh  fix-response-generator.sh  nixpacks.toml  quick_prod_check.sh  railway.toml  rebuild_and_deploy.sh  simple_e2e_test.sh  summarize-errors.sh  syntax-error-summary.sh  test_metrics.sh  test_production_local.sh
full-system/.cargo/: config.toml
full-system/knowledge_files/: arts.json  astronomy.json  biology.json  computerscience.json  economics.json  education.json  geography.json  knowledge_index.json  language.json  law.json  mathematics.json  philosophy.json  physics.json  psychology.json  qwen_cache.json  science.json  sociology.json  technology.json
full-system/src/: audio_service.rs  fast_cache_lookup.rs  geolocation.rs  knowledge_loader.rs  lib.rs  main.rs  main.rs.backup2  main_autonomous.rs  main_fixed.rs  main_persistent.rs  main_production.rs  main_secure.rs  main_with_tokens.rs  metrics.rs  performance_optimizer.rs  state.rs  whatsapp_handler.rs
full-system/static/: 404.html  eternal-complete.html  eternal-streaming.html  image_generator.html  index-websearch.html  index.html  index_with_search_factcheck.html  maintenance.html  stats-dashboard.html  sw.js
full-system/tests/: comprehensive_integration_tests.rs  comprehensive_unit_tests.rs  e2e_tests.rs  integration_tests.rs  mod.rs  test_runner.sh  unit_tests.rs  whatsapp_e2e_test.rs
think-ai-cache/: Cargo.toml
think-ai-cache/src/: lib.rs
think-ai-cli/: Cargo.toml
think-ai-cli/nodejs/: .npmignore  README.md  package-lock.json.bak  package.json  package.json.bak
think-ai-cli/python/: README.md  setup.py  setup_alternative.py
think-ai-cli/src/: commands.rs.backup  main.rs  simple_server.rs  training_runner.rs  ui.rs.backup
think-ai-codellama/: Cargo.toml
think-ai-codellama/src/: lib.rs
think-ai-codellama/tests/: integration_test.rs
think-ai-coding/: Cargo.toml
think-ai-coding/src/: lib.rs
think-ai-consciousness/: Cargo.toml
think-ai-consciousness/src/: consciousness_field.rs  lib.rs  parallel_consciousness.rs  recursive_trainer.rs
think-ai-core/: Cargo.toml
think-ai-core/benches/: o1_performance.rs  o1_performance.rs.bak-persist
think-ai-core/src/: consciousness_engine.rs  knowledge_modules.rs  knowledge_transfer.rs  lib.rs  lsh_engine.rs  qa_training.rs  quantum_core.rs  query_handler.rs  qwen_cache.rs  thinking_patterns.rs
think-ai-core/tests/: o1_integration.rs  o1_integration.rs.bak-persist
think-ai-http/: Cargo.toml
think-ai-http/src/: errors.rs  lib.rs  server.rs
think-ai-image-gen/: Cargo.toml  README.md
think-ai-image-gen/src/: ai_image_improver.rs  demo_mode.rs  image_cache.rs  image_learner.rs  leonardo_client.rs  lib.rs  open_source_generator.rs  prompt_optimizer.rs
think-ai-knowledge/: Cargo.toml  test-trainer-fix.sh  verify-syntax.sh
think-ai-knowledge/src/: automated_benchmark_runner.rs  autonomous_agent.rs  autonomous_agent_v2.rs  autonomous_integration.rs  benchmark_trainer.rs  codellama_component.rs  command_executor.rs  comprehensive_knowledge.rs  comprehensive_trainer.rs  conversation_memory.rs  conversational_component.rs  debug_response_generator.rs  dynamic_expression.rs  dynamic_loader.rs  enhanced_conversation_memory.rs  enhanced_quantum_llm.rs  enhanced_response_generator.rs  evidence.rs  fast_ollama_component.rs  fast_response_component.rs  feynman_explainer.rs  human_conversation_trainer.rs  intelligent_relevance.rs  intelligent_response_selector.rs  isolated_session.rs  lib.rs  live_stream_monitor.rs  llm_benchmarks.rs  llm_engine.rs  minimal_response_generator.rs  multi_candidate_selector.rs  multilevel_cache.rs  multilevel_response_component.rs  natural_response_generator.rs  newsletter_scraper.rs  o1_benchmark_monitor.rs  ollama_component.rs  parallel_processor.rs  persistence.rs  persistent_conversation_memory.rs  (+25 more)
think-ai-knowledge/tests/: autonomous_agent_test.rs  context_retention_test.rs  quantum_llm_integration.rs  response_generator_integration.rs  test_llm_initialization_fix.rs
think-ai-linter/: Cargo.toml
think-ai-linter/src/: lib.rs
think-ai-linter/tests/: test_code.rs
think-ai-llm/: Cargo.toml
think-ai-llm/src/: lib.rs  model.rs
think-ai-local-llm/: Cargo.toml
think-ai-process-manager/: Cargo.toml
think-ai-process-manager/src/: lib.rs  manager.rs
think-ai-process-manager/tests/: integration_test.rs
think-ai-quantum-gen/: Cargo.toml
think-ai-quantum-gen/benches/: quantum_benchmarks.rs
think-ai-quantum-gen/src/: context_manager.rs  lib.rs  (+2 more)
think-ai-qwen/: Cargo.toml
think-ai-server/: Cargo.toml
think-ai-storage/: Cargo.toml
think-ai-tinyllama/: Cargo.toml
think-ai-utils/: Cargo.toml
think-ai-vector/: Cargo.toml
think-ai-webapp/: Cargo.toml
think_ai/: README.md  __init__.py  __main__.py  cli.py  cli_wrapper.py  intelligence_optimizer.py  parallel_processor.py  pyproject.toml  system_config.py
(+1265 files in other folders)
