[workspace]
resolver = "2"
members = [
    "think-ai-core",
    "think-ai-vector", 
    "think-ai-http",
    "think-ai-storage",
    "think-ai-cli",
    "think-ai-consciousness",
    "think-ai-cache",
    "think-ai-utils",
    "think-ai-knowledge",
    "think-ai-tinyllama",
    "think-ai-demos",
    "think-ai-webapp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Think AI Rust Team"]
license = "MIT"
repository = "https://github.com/think-ai/think-ai-rust"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# Functional programming libraries
im = "15"  # Immutable data structures
itertools = "0.13"
rayon = "1.10"  # Data parallelism

# Performance and O(1) operations
ahash = "0.8"  # Fast hash algorithm
dashmap = "6.1"  # Concurrent hashmap
parking_lot = "0.12"  # Fast mutex

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }

# Web framework and 3D graphics
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
wgpu = "0.19"
winit = "0.29"
nalgebra = "0.32"
glam = "0.25"
askama = "0.12"
include_dir = "0.7"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
