[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "think-ai-consciousness"
version = "1.0.0"
description = "Conscious AI with distributed intelligence and Colombian flavor"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Think AI Team", email = "hello@thinkai.co"},
]
maintainers = [
    {name = "Think AI Team", email = "hello@thinkai.co"},
]
keywords = [
    "ai",
    "consciousness", 
    "distributed-intelligence",
    "colombia",
    "artificial-intelligence",
    "claude",
    "ollama"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.20.0",
    "aiohttp>=3.8.0",
    "redis>=4.5.0",
    "motor>=3.1.0",
    "neo4j>=5.0.0",
    "milvus>=2.3.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
full = [
    "playwright>=1.30",
    "pillow>=10.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "transformers>=4.30",
]
social = [
    "tweepy>=4.14",
    "python-twitter>=3.5",
    "requests-oauthlib>=1.3",
]

[project.urls]
Homepage = "https://think-ai.co"
Documentation = "https://docs.think-ai.co"
Repository = "https://github.com/yourusername/think-ai"
Issues = "https://github.com/yourusername/think-ai/issues"
Changelog = "https://github.com/yourusername/think-ai/blob/main/CHANGELOG.md"

[project.scripts]
think-ai = "think_ai.cli:main"
think-ai-chat = "think_ai.cli:chat" 
think-ai-server = "think_ai.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["think_ai*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"