[package]
name = "think-ai-full"
version = "0.1.0"
edition = "2021"
authors = ["champi-dev <danielsarcor@gmail.com>"]

# Removed workspace section - this is part of parent workspace

[[bin]]
name = "think-ai-full"
path = "src/main.rs"

[[bin]]
name = "think-ai-full-persistent"
path = "src/main_persistent.rs"

[[bin]]
name = "think-ai-full-tokens"
path = "src/main_with_tokens.rs"

[[bin]]
name = "think-ai-full-fixed"
path = "src/main_fixed.rs"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# AI Components
rand = "0.8"
sha2 = "0.10"

# WebSocket support
futures-util = "0.3"
async-stream = "0.3"

# Think AI components
think-ai-core = { path = "../think-ai-core" }
think-ai-knowledge = { path = "../think-ai-knowledge" }
think-ai-vector = { path = "../think-ai-vector" }
think-ai-consciousness = { path = "../think-ai-consciousness" }
think-ai-qwen = { path = "../think-ai-qwen" }
think-ai-storage = { path = "../think-ai-storage" }
think-ai-utils = { path = "../think-ai-utils" }