[package]
name = "think-ai-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
think-ai-utils = { path = "../think-ai-utils" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
ahash.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true

# LRU cache with O(1) operations
lru = "0.12"
moka = { version = "0.12", features = ["future"] }