[package]
name = "think-ai-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "think-ai"
path = "src/main.rs"

[dependencies]
think-ai-core = { path = "../think-ai-core" }
think-ai-utils = { path = "../think-ai-utils" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Natural chat system
rand = "0.8"