[package]
name = "think-ai-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "think-ai"
path = "src/main.rs"

[[bin]]
name = "train-comprehensive"
path = "src/bin/train-comprehensive.rs"

[[bin]]
name = "self-learning-service"
path = "src/bin/self-learning-service.rs"

[[bin]]
name = "full-server"
path = "src/bin/full-server.rs"

[[bin]]
name = "train-consciousness"
path = "src/bin/train-consciousness.rs"

[[bin]]
name = "think-ai-coding"
path = "src/bin/think-ai-coding.rs"

[[bin]]
name = "think-ai-llm"
path = "src/bin/think-ai-llm.rs"

[dependencies]
think-ai-core = { path = "../think-ai-core" }
think-ai-utils = { path = "../think-ai-utils" }
think-ai-knowledge = { path = "../think-ai-knowledge" }
think-ai-vector = { path = "../think-ai-vector" }
think-ai-http = { path = "../think-ai-http" }
think-ai-tinyllama = { path = "../think-ai-tinyllama" }
think-ai-consciousness = { path = "../think-ai-consciousness" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Natural chat system
rand = "0.8"
md5 = "0.7"

# HTTP server dependencies
axum.workspace = true
tower.workspace = true
tower-http.workspace = true