[package]
name = "think-ai-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "think-ai"
path = "src/main.rs"

[[bin]]
name = "isolated-chat"
path = "src/bin/isolated-chat.rs"

# Disabled - requires think-ai-qwen
# [[bin]]
# name = "e2e-test-qwen-isolation"
# path = "src/bin/e2e-test-qwen-isolation.rs"

[[bin]]
name = "train-comprehensive"
path = "src/bin/train-comprehensive.rs"

[[bin]]
name = "self-learning-service"
path = "src/bin/self-learning-service.rs"

# Disabled - requires think-ai-qwen
# [[bin]]
# name = "full-server"
# path = "src/bin/full-server.rs"

[[bin]]
name = "train-consciousness"
path = "src/bin/train-consciousness.rs"

# [[bin]]
# name = "think-ai-coding"
# path = "src/bin/think-ai-coding.rs"

[[bin]]
name = "think-ai-llm"
path = "src/bin/think-ai-llm.rs"

[[bin]]
name = "full-working-o1"
path = "src/bin/full-working-o1.rs"


[dependencies]
think-ai-core = { path = "../think-ai-core" }
think-ai-utils = { path = "../think-ai-utils" }
think-ai-knowledge = { path = "../think-ai-knowledge" }
think-ai-vector = { path = "../think-ai-vector" }
think-ai-http = { path = "../think-ai-http" }
think-ai-consciousness = { path = "../think-ai-consciousness" }
# think-ai-qwen = { path = "../think-ai-qwen" } # Temporarily disabled
tokio.workspace = true
dotenv = "0.15"
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"
strum = { version = "0.26", features = ["derive"] }

# Progress indicators
indicatif = "0.17"
colored = "2.1"

# Date/time handling
chrono = "0.4"

# Natural chat system
rand = "0.8"
md5 = "0.7"

# HTTP server dependencies
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

