[package]
name = "think-ai-consciousness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
think-ai-utils = { path = "../think-ai-utils" }
think-ai-qwen = { path = "../think-ai-qwen" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
im.workspace = true

# Functional programming patterns
futures = "0.3"
either = "1.13"

# Additional dependencies
parking_lot.workspace = true
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
rand = "0.8"

[[bin]]
name = "sentient-ai-demo"
path = "src/bin/sentient-ai-demo.rs"