[package]
name = "think-ai-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
think-ai-utils = { path = "../think-ai-utils" }
think-ai-cache = { path = "../think-ai-cache" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
im.workspace = true
itertools.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tracing.workspace = true

# O(1) performance dependencies
ahash.workspace = true
once_cell = "1.20"
arc-swap = "1.7"
num_cpus = "1.16"
rand = "0.8"
uuid = "1.11"
chrono = "0.4"
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"

# [[bench]]
# name = "o1_performance"
# harness = false