[package]
name = "think-ai-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
think-ai-core = { path = "../think-ai-core" }
think-ai-vector = { path = "../think-ai-vector" }
think-ai-utils = { path = "../think-ai-utils" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# HTTP server framework
hyper = { version = "1.5", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
axum = { version = "0.7", features = ["ws", "macros"] }

# Async runtime
futures = "0.3"
chrono = "0.4"