[package]
name = "think-ai-image-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
sha2 = "0.10"
image = "0.24"
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = "3.8"