[package]
name = "think-ai-knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.8"
rand = "0.8"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
think-ai-tinyllama = { path = "../think-ai-tinyllama" }

[[bin]]
name = "train-knowledge"
path = "src/bin/train_knowledge.rs"

[[bin]]
name = "demo-knowledge"
path = "src/bin/demo_knowledge.rs"

[[bin]]
name = "train-direct-answers"
path = "src/bin/train_direct_answers.rs"

[[bin]]
name = "comprehensive-train"
path = "src/bin/comprehensive_train.rs"

[[bin]]
name = "direct-train"
path = "src/bin/direct_train.rs"

[[bin]]
name = "train-1000"
path = "src/bin/train_1000.rs"

[[bin]]
name = "train-minimal"
path = "src/bin/train_minimal.rs"

[[bin]]
name = "build-with-tinyllama"
path = "src/bin/build_with_tinyllama.rs"

[[bin]]
name = "benchmark-integrated-cli"
path = "src/bin/benchmark_integrated_cli.rs"
