[package]
name = "think-ai-process-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Process management
tokio = { version = "1", features = ["full"] }
# HTTP proxy
hyper = { version = "0.14", features = ["full"] }
hyper-reverse-proxy = "0.4"
# Async runtime
futures = "0.3"
# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow = "1"
thiserror = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# UUID for port generation
uuid = { version = "1", features = ["v4"] }
# Progress indicators
indicatif = "0.17"
# Port management
nix = "0.27"