[package]
name = "think-ai-quantum-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
arc-swap = "1.6"
crossbeam = "0.8"
parking_lot = "0.12"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
think-ai-knowledge = { path = "../think-ai-knowledge" }
think-ai-qwen = { path = "../think-ai-qwen" }
futures = "0.3"
rayon = "1.8"
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "quantum_benchmarks"
harness = false