[package]
name = "think-ai-tinyllama"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Candle for running TinyLlama locally
# Temporarily disabled due to OpenSSL dependency
# candle-core = "0.3"
# candle-nn = "0.3"
# candle-transformers = "0.3"
# tokenizers = "0.15"
# hf-hub = "0.3"

# Utils
anyhow = "1.0"
tracing.workspace = true