[package]
name = "think-ai-webapp"
version = "0.1.0"
authors = ["champi-dev <danielsarcor@gmail.com>"]
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Yew Framework
yew = { version = "0.21", features = ["csr"] }

# Math
nalgebra = "0.32"

# WebGL and Graphics
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document", 
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlProgram",
  "WebGlBuffer",
  "WebGlUniformLocation",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "InputEvent",
  "SubmitEvent",
  "KeyboardEvent",
  "console"
] }
js-sys = "0.3"

# Templates and Static Files
askama = "0.12"
include_dir = "0.7"

# Async and Utils
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
anyhow = "1.0"
base64 = "0.21"
futures = "0.3"
rand = "0.8"
env_logger = "0.11"

# Think AI Dependencies
think-ai-core = { path = "../think-ai-core" }
think-ai-vector = { path = "../think-ai-vector" }
think-ai-cache = { path = "../think-ai-cache" }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "think-ai-webapp"
path = "src/bin/main.rs"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
