[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "think-ai"
version = "0.1.0"
description = "A comprehensive AI system for universal knowledge access"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["ai", "knowledge-management", "edge-computing", "consciousness-aware"]
authors = [
  { name = "Think AI Foundation", email = "info@think-ai.org" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "scylla-driver>=3.26.0",
  "redis>=5.0.0",
  "pymilvus>=2.3.0",
  "qdrant-client>=1.7.0",
  "textual>=0.47.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.19.0",
  "pydantic>=2.5.0",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "numpy>=1.26.0",
  "torch>=2.1.0",
  "transformers>=4.36.0",
  "neo4j>=5.16.0",
  "aiofiles>=23.2.0",
  "httpx>=0.26.0",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.0",
  "psutil>=5.9.0",
  "gputil>=1.4.0",
  "bitsandbytes>=0.41.0",
  "accelerate>=0.25.0",
  "sentence-transformers>=2.2.0",
  "rich>=13.7.0",
  "typer>=0.9.0",
  "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "pre-commit>=3.6.0",
]

[project.scripts]
think-ai = "think_ai.cli.main:main"
think-ai-tui = "think_ai.ui.app:run_ui"

# Think AI uses its own linter - no external tools needed!
[tool.think-ai-linter]
line-length = 200
target-version = "py310"

# Think AI Auto-Format settings
[tool.think-ai-formatter]
line-length = 200
indent-size = 4

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]