[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "think-ai"
version = "0.1.0"
description = "A comprehensive AI system for universal knowledge access"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["ai", "knowledge-management", "edge-computing", "consciousness-aware"]
authors = [
  { name = "Think AI Foundation", email = "info@think-ai.org" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "scylla-driver>=3.26.0",
  "redis>=5.0.0",
  "pymilvus>=2.3.0",
  "qdrant-client>=1.7.0",
  "textual>=0.47.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.19.0",
  "pydantic>=2.5.0",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "numpy>=1.26.0",
  "torch>=2.1.0",
  "transformers>=4.36.0",
  "neo4j>=5.16.0",
  "aiofiles>=23.2.0",
  "httpx>=0.26.0",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "black>=23.12.0",
  "ruff>=0.1.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
]

[project.scripts]
think-ai = "think_ai.cli:main"
think-ai-tui = "think_ai.ui.app:run_ui"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]